--- a/index.html
+++ b/index.html
@@ -5,32 +5,78 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Portfolio</title>
+
+
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
+
 <body>
-  <header id="navbar">
-    <nav>
-      <ul>
-        <li><a href="#welcome-section">Welcome</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#" id="profile-link" target="_blank">Profile</a></li>
-      </ul>
+
+  <header class="header">
+    <a href="#" class="logo">Welcome</a>
+
+    <div class="bx bx-menu" id="menu-icon"></div>
+
+
+    <nav class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#education">Education</a>
+        <a href="#skills">Skills</a>
+        <a href="#contact">Contact</a>
     </nav>
   </header>
-  
-  <section id="welcome-section">
-    <div class="welcome-text">
-      <h1>Welcome to My Portfolio</h1>
+
+  <section class="home" id="home">
+    <div class="home-content">
+        <h1>Hi, I'm <span> Hersh</span></h1>
+        <div class="text-animate">
+            <h3>Frontend Developer</h3>
+        </div>
+        <p>Lorem ipsum</p>
+
+    
+        <div class="btn-box">
+            <a href="#" class="btn">Hire me</a>
+            <a href="#" class="btn">Let's Talk</a>
+        </div>
     </div>
-  </section>
-  
-  <section id="projects">
-    <div class="project-tile">
-      <h2>Project 1</h2>
-      <p>Description of Project 1</p>
-      <a href="#">Link to Project 1</a>
+    <div class="home-sci">
+        <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+        <a href="#"><i class='bx bxl-github'></i></a>
     </div>
+
+    <div class="home-imgHover"></div>
   </section>
-  
+
+    <section class="about" id="about">
+        <h2 class="heading">About <span>Me</span></h2>
+
+        <div class="about-img">
+            <img src="cat.jpg" alt ="">
+            <span class="circle-spin"></span>
+        </div>
+
+        <div class="about-content">
+            <h3>Frontend Developer!</h3>
+            <p>Lorem inpsum</p>
+
+            <div class="btn-box btns">
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+
+        </div>
+
+
+
+
+    </section>
+
+
+
+
   <script src="script.js"></script>
 </body>
 </html>
